Fix horizontal scrolling and scrollbar in sidebar

--- a/src/pages/components/NavMenu.css
+++ b/src/pages/components/NavMenu.css
@@ -86,6 +86,8 @@ h1 {
     display: flex;
     flex-direction: column;
     overflow-y: hidden;
+    scrollbar-gutter: stable;
+    overflow-x: hidden;
 }
 
 #sidebar:hover {
